# golovolomka

./: .gitignore  CMakeLists.txt  Makefile
doc/: Doxyfile
project/win32/: Golovolomka.sln  Golovolomka.vcproj
src/: CMakeLists.txt  Makefile  coord.cpp  coord.h  cube.h  figure.cpp  figure.h  figure_packer.cpp  figure_packer.h  figure_packer_observer.cpp  figure_packer_observer.h  figure_placement_heuristics.cpp  figure_placement_heuristics.h  figure_rotator.cpp  figure_rotator.h  figure_serialization.cpp  figure_serialization.h  figure_set_enumerator.cpp  figure_set_enumerator.h  figure_transformation_enumerator.cpp  figure_transformation_enumerator.h  main.cpp  obj_writer.cpp  obj_writer.h  transformed_figure.cpp  transformed_figure.h  typedef.cpp  typedef.h
tools/Direct3D/MeshFromOBJ/: MeshFromOBJ.manifest  MeshFromOBJ.rc  MeshFromOBJ_2005.sln  MeshFromOBJ_2005.vcproj  MeshFromObj.cpp  MeshLoader.cpp
